Assorted multiselect fixes (#116)
* Rational support for "Select all" in albums with photos and subalbums (do not generate an error message).

* Add support for Shift key to select a range of albums or photos.

* Intuitive clearing of selection with a single click.

* Unselect with Ctrl worked correctly only for the first image in an album.

* Cleaned up calculations of selection and overlap.

* Make sure that the content container fills the viewport.

* Don't let the footer overlap the sidebar.

* Fixes small full screen behaviour.

--- a/styles/main/_content.scss
+++ b/styles/main/_content.scss
@@ -2,9 +2,10 @@
 
 	display: flex;
 	flex-wrap: wrap;
+	align-content: flex-start;
 	padding: 50px 30px 33px 0;
 	width: calc(100% - 30px);
-	min-height: unset;
+	min-height: calc(100vh - 83px - 36px);
 	transition: margin-left .5s;
 	-webkit-overflow-scrolling: touch;
 	max-width: calc(100vw - 10px);
