--- a/styles/main/_multiselect.scss
+++ b/styles/main/_multiselect.scss
@@ -3,5 +3,5 @@
 	background-color: rgba(0, 94, 204, .3);
 	border: 1px solid rgba(0, 94, 204, 1);
 	border-radius: 3px;
-	z-index: 3;
+	z-index: 5;
 }
